--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>LambdaZoom Browser</title>
+    <title>Welcome to LambdaZoom</title>
 
     <link rel="icon" href="{{ context.URL_PREFIX }}/static/logo.png">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -27,7 +27,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="{{ context.URL_PREFIX }}/">LambdaZoom</a>
+          <a class="navbar-brand" href="#">LambdaZoom</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -37,22 +37,22 @@
       </div>
     </nav>
 
-    <div class="container">
+    <div class="container-fluid">
 
-        <h1>LambdaZoom browser</h1>
+        <h1>Welcome to Roger's VR Galleries</h1>
 
-        <table class="table table-striped table-bordered table-hover table-condensed">
+        <table class="table table-striped table-bordered table-hover table-condensed table-responsive">
             <thead>
                 <tr>
-                    <th>Filename</th>
+                    <th>Gallery</th>
                 </tr>
             </thead>
             <tbody>
-            {% for zoom in zooms %}
+              {% for gallery in galleries %}
                 <tr>
-                    <td><a href="./{{ zoom }}" role="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span></a> <a href="./{{ zoom }}">{{ zoom }}</a></td>
+                    <td><a href="/gallery/{{ gallery }}">{{ gallery }}</a></td>
                 </tr>
-            {% endfor %}
+              {% endfor %}
             </tbody>
         </table>
 
