--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -9,14 +9,14 @@
     <script src="https://npmcdn.com/aframe-event-set-component@3.0.1"></script>
     <script src="https://npmcdn.com/aframe-layout-component@3.0.1"></script>
     <script src="https://npmcdn.com/aframe-template-component@3.1.1"></script>
-    <script src="/static/set-image.js"></script>
+    <script src="{{ context.STATIC_PREFIX }}/set-image.js"></script>
   </head>
   <body>
     <a-scene>
       <a-assets>
       {% for pano in panos %}
       <img id="{{ pano.id }}" crossorigin="anonymous" src="{{ pano.pano }}">
-      <img id="{{ pano.id }}-thumb" crossorigin="anonymous" src="{{ pano.preview }}">
+      <img id="{{ pano.id }}-thumb" crossorigin="anonymous" src="{{ pano.small }}">
       {% endfor %}
 
         <audio id="click-sound" crossorigin="anonymous" src="https://cdn.aframe.io/360-image-gallery-boilerplate/audio/click.ogg"></audio>
