--- a/templates/home.html
+++ b/templates/home.html
@@ -7,39 +7,20 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Welcome to LambdaZoom</title>
+    <title>Welcome to Roger's VR Experiments</title>
 
     <link rel="icon" href="{{ context.URL_PREFIX }}/static/logo.png">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="{{ context.URL_PREFIX }}/static/styles.css">
+    <link rel="stylesheet" href="{{ context.STATIC_PREFIX }}/styles.css">
   </head>
 
   <body>
 
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">LambdaZoom</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="{{ context.URL_PREFIX }}/browse">Browse</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
-
     <div class="container-fluid">
 
-        <h1>Welcome to Roger's VR Galleries</h1>
+        <h1>Welcome to Roger's VR Experiments</h1>
 
         <table class="table table-striped table-bordered table-hover table-condensed table-responsive">
             <thead>
