--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <title>Welcome to Roger's VR Experiments</title>
     <meta name="description" content="{{ gallery }}: 360&deg; Image Gallery">
     <link rel="icon" href="{{ context.STATIC_PREFIX }}/logo.png">
